PostGIS 3.1.0XXXX
2020/XX/XX

Only tickets not included in 3.1.0alpha1

* Breaking changes *
  -

* New features *
  - #4656, Cast a geojson_text::geometry for implicit GeoJSON ingestion (Raúl Marín)
  - #4687, Expose GEOS MaximumInscribedCircle (Paul Ramsey)
  -

* Enhancements *
  - #4681, ST_GetFaceGeometry: print corruption information (Sandro Santilli)
  - #4651: ST_Simplify: Don't copy if nothing is removed (Raúl Marín)
  - #4657: Avoid De-TOASTing where possible (Paul Ramsey)
  - #4490, Tweak function costs (Raúl Marín)
  - #4672, Cache getSRSbySRID and getSRIDbySRS (Raúl Marín)
  - #4676, Avoid decompressing toasted geometries to read only the header (Raúl Marín)
           Optimize cast to Postgresql point type (Raúl Marín)
  - #4620, Update internal wagyu to 0.5.0 (Raúl Marín)

* Bug fixes *
  - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
  - #4661, Fix access to spatial_ref_sys with a non default schema (Raúl Marín)
  - #4670, ST_AddPoint: Fix bug when a positive position is requested (Raúl Marín)
  - #4623, Optimize varlena returning functions (Raúl Marín)

PostGIS 3.1.0alpha1
2020/02/01

* Breaking changes *
  - svn number replaced by git hash in version output
    (Sandro Santilli, Raúl Marín)
  - remove ChangeLog (anyone who needs that much info should refer to git log)
    (Regina Obe)
  - #4577, Drop support for PostgreSQL 9.5 (Raúl Marín)
  - #4579, Drop postgis_proc_set_search_path.pl (Raúl Marín)
  - #4601, ST_TileEnvelope signature changed.
  - #3057, ST_Force3D, ST_Force3DZ, ST_Force3DM and ST_Force4D signatures changed.

* New features *
  - #4601, Add ST_TileEnvelope margin argument (Yuri Astrakhan)
  - #2972, Add quiet mode (-q) to pgsql2shp (Kristian Thy)
  - #4617, Add configure switch `--without-phony-revision` (Raúl Marín)
  - #3057, Optional value params for Force3D*, Force4D functions (Kristian Thy)
  - #4624, ST_HexagonGrid and ST_SquareGrid, set returning functions to